@@ -77,10 +77,6 @@ compat_socket_selfpipe_t* compat_socket_selfpipe_alloc( void )
 
   compat_socket_selfpipe_t *self =
     libspectrum_new( compat_socket_selfpipe_t, 1 );
-  if( !self ) {
-    ui_error( UI_ERROR_ERROR, "%s: %d: out of memory", __FILE__, __LINE__ );
-    fuse_abort();
-  }
 
   error = pipe( pipefd );
   if( error ) {
