@@ -98,7 +98,6 @@ wd_fdc *
 wd_fdc_alloc_fdc( wd_type_t type, int hlt_time, unsigned int flags )
 {
   wd_fdc *fdc = libspectrum_new( wd_fdc, 1 );
-  if( !fdc ) return NULL;
 
   switch( type ) {
   default:
