@@ -323,10 +323,6 @@ zxcf_to_snapshot( libspectrum_snap *snap )
   for( i = 0; i < ZXCF_PAGES; i++ ) {
 
     buffer = libspectrum_new( libspectrum_byte, ZXCF_PAGE_LENGTH );
-    if( !buffer ) {
-      ui_error( UI_ERROR_ERROR, "Out of memory at %s:%d", __FILE__, __LINE__ );
-      return;
-    }
 
     memcpy( buffer, ZXCFMEM[ i ], ZXCF_PAGE_LENGTH );
     libspectrum_snap_set_zxcf_ram( snap, i, buffer );
